# cpp_genre_classifier

./: .gitignore  CMakeLists.txt  GenrePredictor.hpp  README.md  main.cpp
src/: GenreClassifier  GenrePredictor.hpp
test/: CMakeLists.txt  testGenrePredictor.cpp
